<resources>
    <string name="shr_app_name">Security+</string>
    <string name="logo">logo</string>
    <string name="shr_app_principle">Born For Security.</string>
    <string name="copyright">copyright @ 2019 Security</string>
    <string name="shr_hint_username">Username</string>
    <string name="shr_hint_password">Password</string>
    <string name="shr_button_login">Login</string>
    <string name="shr_button_enroll">Enroll</string>
    <string name="shr_error_password">Your password or account might be wrong.</string>
    <string name="shr_filter_title">Filter</string>
    <string name="shr_search_title">Search</string>
    <string name="shr_product_title">Security Services</string>
    <string name="shr_product_description">24 hours, Always online. </string>

    <!-- Shrine backdrop menu labels -->
    <string name="shr_featured_label">Featured</string>
    <string name="shr_apartment_label">Apartment</string>
    <string name="shr_accessories_label">Accessories</string>
    <string name="shr_shoes_label">Shoes</string>
    <string name="shr_tops_label">Tops</string>
    <string name="shr_bottoms_label">Bottoms</string>
    <string name="shr_dresses_label">Dresses</string>
    <string name="shr_account_label">My Account</string>
</resources>
